fix index.html and create catalog.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -6,47 +6,96 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project_Meira</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+   <style>
+        body {
+            display: flex;
+            height: 100vh;
+            overflow-x: hidden;
+        }
+        .sidebar {
+            background-color: #343a40;
+            color: white;
+            width: 250px;
+        }
+        .sidebar a {
+            color: white;
+        }
+        .content {
+            flex-grow: 1;
+            padding: 20px;
+        }
+    </style>
 </head>
 <body>
 
-   <h1 class="text-center" style="margin-top: 100px;">Главная</h1>
-   <h4 class="text-center">Вы находитесь на сайте, преднозначеном для продажи товаров.</h4>
-   <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body text-center">
-                        <h5 class="card-title bg-secondary text-white">Товар 1</h5>
-
-                        <p class="card-text">$100</p>
-                        <p class="card-text">10 users included, 2 GB of storage, Email support, Help center access</p>
-                        <a href="#" class="btn btn-primary">Купить</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body text-center">
-                        <h5 class="card-title bg-secondary text-white">Товар 1</h5>
-                        <p class="card-text">$100</p>
-                        <p class="card-text">10 users included, 2 GB of storage, Email support, Help center access</p>
-                        <a href="#" class="btn btn-primary">Купить</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body text-center">
-                        <h5 class="card-title  bg-secondary text-white">Товар 1</h5>
-                        <p class="card-text">$100</p>
-                        <p class="card-text">10 users included, 2 GB of storage, Email support, Help center access</p>
-                        <a href="#" class="btn btn-primary">Купить</a>
-                    </div>
+    <div class="sidebar d-flex flex-column p-3">
+        <h4 class="text-center">Меню</h4>
+        <ul class="nav flex-column">
+            <li class="nav-item">
+                <a class="nav-link active" href="#">Главная</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Категории</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Заказы</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Контакты</a>
+            </li>
+        </ul>
+        <div class="mt-auto">
+            <div class="dropdown">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Пользователь
+                </a>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                    <a class="dropdown-item" href="#">Профиль</a>
+                    <a class="dropdown-item" href="#">Выход</a>
                 </div>
             </div>
         </div>
     </div>
+    </nav>
+    <div class="content">
+           <h1 class="text-center" style="margin-top: 100px;">Главная</h1>
+           <h4 class="text-center">Вы находитесь на сайте, предназначеном для продажи товаров.</h4>
+           <div class="container mt-5">
+                <div class="row justify-content-center">
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-body text-center">
+                                <h5 class="card-title bg-secondary text-white">Товар 1</h5>
 
+                                <p class="card-text">$100</p>
+                                <p class="card-text">10 users included, 2 GB of storage, Email support, Help center access</p>
+                                <a href="#" class="btn btn-primary">Купить</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-body text-center">
+                                <h5 class="card-title bg-secondary text-white">Товар 1</h5>
+                                <p class="card-text">$100</p>
+                                <p class="card-text">10 users included, 2 GB of storage, Email support, Help center access</p>
+                                <a href="#" class="btn btn-primary">Купить</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card">
+                            <div class="card-body text-center">
+                                <h5 class="card-title  bg-secondary text-white">Товар 1</h5>
+                                <p class="card-text">$100</p>
+                                <p class="card-text">10 users included, 2 GB of storage, Email support, Help center access</p>
+                                <a href="#" class="btn btn-primary">Купить</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+       </div>
 </body>
 
 </html>
